--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,30 @@ body {
 	color: white;
 }
 
+.header {
+	position: absolute;
+	z-index: 100;
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	max-width: 1790px;
+	top: 28px;
+	left: 56px;
+}
+
+.header a {
+	display: inline-block;
+	background: #e50914;
+	color: white;
+	align-self: flex-start;
+	padding: 8px 18px;
+	text-decoration: none;
+	border-radius: 3px;
+}
+
 .main {
 	height: 785px;
-	background: url(../img/Background.jpg) center;
+	background: url(../img/bg.jpg) center;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -24,15 +45,49 @@ body {
 	position: relative;
 }
 
+.span {
+	font-size: 26px;
+
+}
+
+.main p {
+	font-size: 19px;
+}
+
 .main-child {
 	z-index: 1;
+	display: grid;
+	justify-items: center;
 }
 
 .gradient {
-	background: rgba(0, 0, 0, 0.5);
+    background: rgba(0,0,0,.4);
+    background-image: linear-gradient(0deg,rgba(0,0,0,.8) 0,transparent 60%,rgba(0,0,0,.8));
 	position: absolute;
 	top: 0;
 	left: 0;
 	right: 0;
 	bottom: 0;
+}
+
+.form-cta {
+	display: grid;
+	grid-template-columns:500px 250px;
+	margin-top: 30px;
+	margin-bottom: 10px;
+}
+
+.form-cta input {
+	padding: 20px 10px;
+	font-size: 18px;
+	font-family: sans-serif;
+}
+
+.form-cta button {
+	color: white;
+	background-color: #e50914;
+	outline: none;
+	border: none;
+	font-size: 30px;
+	text-transform: uppercase;
 }
