--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,11 @@ body {
 	color: white;
 }
 
+.container {
+	max-width: 1130px;
+	margin: 0 auto;
+}
+
 .header {
 	position: absolute;
 	z-index: 100;
@@ -61,8 +66,8 @@ body {
 }
 
 .gradient {
-    background: rgba(0,0,0,.4);
-    background-image: linear-gradient(0deg,rgba(0,0,0,.8) 0,transparent 60%,rgba(0,0,0,.8));
+	background: rgba(0, 0, 0, .4);
+	background-image: linear-gradient(0deg, rgba(0, 0, 0, .8) 0, transparent 60%, rgba(0, 0, 0, .8));
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -72,7 +77,7 @@ body {
 
 .form-cta {
 	display: grid;
-	grid-template-columns:500px 250px;
+	grid-template-columns: 500px 250px;
 	margin-top: 30px;
 	margin-bottom: 10px;
 }
@@ -90,4 +95,52 @@ body {
 	border: none;
 	font-size: 30px;
 	text-transform: uppercase;
+	cursor: pointer;
+}
+
+.form-cta button::after {
+	content: "";
+	display: inline-block;
+	width: 10px;
+	height: 20px;
+	background: url(../img/seta.svg);
+	margin-left: 20px;
+}
+
+.form-cta button:hover {
+	background: #f40612;
+}
+
+.section {
+	background: black;
+	padding: 4rem 0;
+}
+
+.section h1 {
+	font-size: 50px;
+	margin-bottom: 16px;
+}
+.section p {
+	font-size: 20px;
+}
+
+.grid {
+	display: grid;
+	grid-template-columns: 1.1fr 1fr;
+	align-items: center;
+}
+
+.img-tv {
+	position: relative;
+}
+
+.img-tv img {
+	position: relative;
+	z-index: 1;
+}
+
+.video-tv {
+	position: absolute;
+	top: 80px;
+	left: 70px;
 }
